<resources>
    <string name="application_label">BitDownload</string>
    <string name="application_version_info">%s V1.1.0</string>
    <string name="activity_browse_peer_name">Browse Host</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="search_label">Search</string>
    <string name="not_sharing_files">is not sharing any files.</string>
    <string name="browse_peer">Browse Peer</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="applications">Apps</string>
    <string name="pictures">Pictures</string>
    <string name="ringtones">Ringtones</string>
    <string name="documents">Documents</string>
    <string name="share">Share</string>
    <string name="unshare">Unshare</string>
    <string name="me">Me</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="download_selected_files">Download Selected</string>
    <string name="toggle_sharing_selected_files">Toggle Sharing</string>
    <string name="is_not_responding">%s is not responding</string>
    <string name="searching_for">Searching for</string>
    <string name="update_title">Update Time!</string>
    <string name="update_message"> has Downloaded a new PERFORMANCE UPDATE for you, please go ahead and touch the OK button if you want to install it now.</string>
    <string name="change_my_nickname">Change my Nickname</string>
    <string name="done">Done</string>
    <string name="about">About</string>
    <string name="send_to_third_party">Send/Upload</string>
    <string name="send_file_using">Send file using</string>
    <string name="my_files">My files</string>
    <string name="preferences">Settings</string>
    <string name="files">files</string>
    <string name="tos_title">Terms of Use</string>
    <string name="tos_accept">Accept</string>
    <string name="tos_refuse">Refuse</string>
    <string name="minimize_frostwire">Minimize </string>
    <string name="are_you_sure_you_wanna_leave">Are you sure you want to go back to the home screen?</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="failed_to_set_wallpaper">Failed to set Wallpaper</string>
    <string name="unknown">Unknown</string>
    <string name="open">Open</string>
    <string name="sharing_preferences">Sharing Preferences</string>
    <string name="nickname">Nickname</string>
    <string name="how_other_users_will_see_you">How other users will see you</string>
    <string name="networking_preferences">Networking Preferences</string>
    <string name="simultaneous_uploads">Simultaneous Uploads</string>
    <string name="simultaneous_uploads_summary">Set how many uploads you want to allow at the same time.</string>
    <string name="other_settings">Other Settings</string>
    <string name="vibrate_on_finished_download">Vibrate when download finishes</string>
    <string name="use_mobile_data">Use 3G/4G for BitTorrent</string>
    <string name="use_mobile_data_summary">Use mobile network for BitTorrent downloads. Data Overage charges may apply. Use carefully.</string>
    <string name="please_update_to_v">Please Update to v. %s</string>
    <string name="cant_open_file">Sorry, don\'t know how to open this file.</string>
    <string name="dialog_share_indicator_check_text">Show this help next time</string>
    <string name="show_share_indication">Show Sharing Help</string>
    <string name="download_added_to_queue">1 file will start downloading</string>
    <string name="downloads_added_to_queue">%s files will start downloading</string>
    <string name="sharing_num_files">Sharing %1$s files of type %2$s</string>
    <string name="share_selected_files">Share selected files</string>
    <string name="unshare_selected_files">Unshare selected files</string>
    <string name="share_finished_downloads">Share finished downloads on Wi-Fi</string>
    <string name="share_finished_downloads_summary">Finished downloads will be available to other  users on your Wi-Fi network.</string>
    <string name="are_you_sure_delete_files">Are you sure you want to PERMANENTLY DELETE the selected files from your device?</string>
    <string name="delete_file_menu_action">Delete</string>
    <string name="delete_file_menu_action_count">Delete (%s)</string>
    <string name="open_menu_action">Open %s</string>
    <string name="cancel_menu_action">Stop Transfer</string>
    <string name="cancel_delete_menu_action">Stop and Delete Data</string>
    <string name="wanna_download_question">Wanna download?</string>
    <string name="summary_files_shared">Sharing %s files locally</string>
    <string name="media_type_documents">Books/Docs</string>
    <string name="media_type_applications">Applications</string>
    <string name="media_type_audio">Audio</string>
    <string name="media_type_video">Video</string>
    <string name="media_type_images">Images</string>
    <string name="media_type_torrents">Torrents</string>
    <string name="torrent_fetcher_download_status_downloading_torrent">Downloading Torrent</string>
    <string name="torrent_fetcher_download_status_error">Error</string>
    <string name="torrent_fetcher_download_status_canceled">Canceled</string>
    <string name="media_player_failed">Media player failed</string>
    <string name="search_settings">Search Settings</string>
    <string name="use_tpb">Use TPB</string>
    <string name="use_tpb_summary">TPB is magnet based, works only on Wi-Fi</string>
    <string name="use_torrentsfm">Use Torrents.fm</string>
    <string name="use_torrentsfm_summary">Torrents.fm is magnet based, works only on Wi-Fi</string>
    <string name="use_monova">Use Monova</string>
    <string name="use_monova_summary">Monova is magnet based, works only on Wi-Fi</string>
    <string name="use_extratorrent">Use ExtraTorrent.com</string>
    <string name="use_mininova">Use Mininova.org</string>
    <string name="use_yify">Use Yify</string>
    <string name="use_yify_summary">Yify is magnet based, works only on Wi-Fi</string>
    <string name="search">Search</string>
    <string name="browser">Browser</string>
    <string name="no_borwser">Open with Browser failed!</string>
    <string name="transfers">Transfers</string>
    <string name="dummy_title">[Title]</string>
    <string name="dummy_status">[Status]</string>
    <string name="dummy_speed">[Speed]</string>
    <string name="dummy_size">[Size]</string>
    <string name="dummy_extra">[Extra]</string>
    <string name="dummy_seeds">[Seeds]</string>
    <string name="dummy_peers">[Peers]</string>
    <string name="yes_no_cancel_transfer_question">Are you sure you want to stop and remove this download from the list (No data will be erased)?</string>
    <string name="yes_no_cancel_transfer_question_cloud">Are you sure you want to stop and remove this download from the list?</string>
    <string name="yes_no_cancel_delete_transfer_question">Are you sure you want to cancel this download (Downloaded data so far will be erased)?</string>
    <string name="cancel_transfer">Cancel Transfer</string>
    <string name="azureus_peer_manager_status_finished">Finished</string>
    <string name="azureus_peer_manager_status_finishedin">Finished in</string>
    <string name="azureus_formats_units_alot">A lot !!!</string>
    <string name="azureus_discarded">discarded</string>
    <string name="azureus_manager_item_waiting">Waiting</string>
    <string name="azureus_manager_item_initializing">Initializing</string>
    <string name="azureus_manager_item_allocating">Allocating</string>
    <string name="azureus_manager_item_checking">Checking</string>
    <string name="azureus_manager_item_finishing">Finishing</string>
    <string name="azureus_manager_item_ready">Waiting for other torrent(s) to Queue</string>
    <string name="azureus_manager_item_downloading">Downloading</string>
    <string name="azureus_manager_item_seeding">Seeding</string>
    <string name="azureus_manager_item_superseeding">Super-Seeding</string>
    <string name="azureus_manager_item_stopping">Stopping</string>
    <string name="azureus_manager_item_stopped">Stopped</string>
    <string name="azureus_manager_item_paused">Paused</string>
    <string name="azureus_manager_item_queued">Queued</string>
    <string name="azureus_manager_item_error">Error</string>
    <string name="azureus_manager_item_forced">Forced</string>
    <string name="azureus_general_view_yes">Yes</string>
    <string name="azureus_general_view_no">No</string>
    <string name="pause_torrent_menu_action">Pause</string>
    <string name="resume_torrent_menu_action">Resume</string>
    <string name="peer_http_download_status_downloading">Downloading</string>
    <string name="peer_http_download_status_complete">Complete</string>
    <string name="peer_http_download_status_error">Error</string>
    <string name="peer_http_download_status_cancelled">Cancelled</string>
    <string name="peer_http_download_status_waiting">Waiting</string>
    <string name="peer_http_download_status_unknown">Unknown</string>
    <string name="peer_http_upload_status_uploading">Uploading</string>
    <string name="peer_http_upload_status_streaming">Streaming</string>
    <string name="peer_http_upload_status_complete">Complete</string>
    <string name="peer_http_upload_status_cancelled">Cancelled</string>
    <string name="peer_http_upload_status_unknown">Unknown</string>
    <string name="download_finished">Download Finished</string>
    <string name="clear_complete">Clear Complete</string>
    <string name="downloading_promotion">Downloading %s</string>
    <string name="torrent_settings">Torrent Settings</string>
    <string name="torrent_max_download_speed">Max Download Speed</string>
    <string name="torrent_max_upload_speed">Max Upload Speed</string>
    <string name="torrent_max_downloads">Max Downloads</string>
    <string name="torrent_max_uploads">Max Uploads</string>
    <string name="torrent_max_total_connections">Max Total Connections</string>
    <string name="seed_finished_torrents">Seed Finished Torrents</string>
    <string name="seed_finished_torrents_summary">Share pieces of torrent downloads with anybody on the internet via BitTorrent</string>
    <string name="seed_finished_torrents_wifi_only">Seed only on Wi-Fi</string>
    <string name="seed_finished_torrents_wifi_only_summary">Seeds only when connected via Wi-Fi to save bandwidth on your data plan</string>
    <string name="show_transers_on_download_start">Show Transfers On Download Start</string>
    <string name="show_new_transfer_dialog">Show New Transfer dialog</string>
    <string name="clear">Clear</string>
    <string name="storage_preference_title">Select Storage Location</string>
    <string name="storage_preference_summary">The default storage location where files will be saved.</string>
    <string name="bittorrent">BitTorrent</string>
    <string name="bittorrent_network_summary">BitTorrent connection status</string>
    <string name="wifi_sharing">Wi-Fi Sharing</string>
    <string name="stop">Stop</string>
	<string name="use_youtube">Use YouTube.com</string>
	<string name="use_soundcloud">Use Soundcloud.com</string>
	<string name="upnp_discovery">Wi-Fi Sharing</string>
    <string name="upnp_discovery_summary">Share files with peers on the local Wi-Fi network.</string>
    <string name="use_archiveorg">Use Archive.org</string>
    <string name="clear_search_cache">Clear Search Cache</string>
    <string name="clear_search_cache_summary">Clear search cache entries</string>
    <string name="use_frostclick">Use FrostClick</string>
    <string name="delete_this_track">Delete this track</string>
    <string name="use_bitsnoop">Use BitSnoop</string>
    <string name="use_torlock">Use TorLock</string>
    <string name="use_eztv">Use Eztv</string>
    <string name="exit">Exit</string>
</resources>