<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011-2014, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_audio_player_share"
        android:icon="@drawable/contextmenu_icon_share"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/menu_audio_player_stop"
        android:icon="@drawable/contextmenu_icon_stop"
        android:title="@string/stop">
    </item>
    <item
        android:id="@+id/menu_audio_player_delete"
        android:icon="@drawable/contextmenu_icon_trash"
        android:title="@string/delete_this_track">
    </item>

</menu>